--- a/hugo.yaml
+++ b/hugo.yaml
@@ -38,8 +38,8 @@ languages:
         - name: Tags
           url: tags/
           weight: 10
-        - name: WiKi
-          url: https://github.com/adityatelange/hugo-PaperMod/wiki/
+        - name: About Me
+          url: about/
 
 
 outputs:
